--- a/core/templates/core/refaccount_list.html
+++ b/core/templates/core/refaccount_list.html
@@ -39,7 +39,7 @@
 
     <div class="flex justify-between items-center">
         <div>
-            <h1 class="text-2xl font-bold text-gray-900">ДАНСНЫ ТӨЛӨВЛӨГӨӨ</h1>
+            <h1 class="text-base lg:text-lg xl:text-xl font-medium text-gray-900">ДАНСНЫ ТӨЛӨВЛӨГӨӨ</h1>
             
         </div>
         {% if perms.core.add_refaccount %}
