--- a/core/templates/core/refasset_master_detail.html
+++ b/core/templates/core/refasset_master_detail.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container mx-auto px-4 py-6">
     <div class="mb-6">
-        <h1 class="text-3xl font-bold text-gray-900">ҮНДСЭН ХӨРӨНГИЙН УДИРДЛАГА</h1>
+        <h1 class="text-base lg:text-lg xl:text-xl font-medium text-gray-900">ҮНДСЭН ХӨРӨНГИЙН УДИРДЛАГА</h1>
         <p class="text-gray-600 mt-2">Үндсэн хөрөингийн мэдээлэл удирдах</p>
     </div>
 
