--- a/core/templates/core/refassetcard_list.html
+++ b/core/templates/core/refassetcard_list.html
@@ -8,7 +8,7 @@
     <!-- Header -->
     <div class="flex justify-between items-center">
         <div>
-            <h1 class="text-2xl font-bold text-gray-900">ҮНДСЭН ХӨРӨНГИЙН КАРТ</h1>            
+            <h1 class="text-base lg:text-lg xl:text-xl font-medium text-gray-900">ҮНДСЭН ХӨРӨНГИЙН КАРТ</h1>            
         </div>
         {% if perms.core.add_ref_asset_card %}
         <a href="{% url 'core:ref_asset_card_create' %}" class="inline-flex items-center px-4 py-2 bg-accounting-blue text-white text-sm font-medium rounded-md hover:bg-accounting-blue-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-accounting-blue">
