--- a/core/templates/core/refinventory_list.html
+++ b/core/templates/core/refinventory_list.html
@@ -21,7 +21,7 @@
     {% if not is_modal %}
     <div class="flex justify-between items-center">
         <div>
-            <h1 class="text-2xl font-bold text-gray-900">БАРАА МАТЕРИАЛ</h1>            
+            <h1 class="text-base lg:text-lg xl:text-xl font-medium text-gray-900">БАРАА МАТЕРИАЛ</h1>            
         </div>
         {% if perms.core.add_refinventory %}
         <a href="{% url 'core:refinventory_create' %}" class="inline-flex items-center px-4 py-2 bg-accounting-blue text-white text-sm font-medium rounded-md hover:bg-accounting-blue-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-accounting-blue">
